Update publication date template logic

--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -138,7 +138,7 @@
           {% endif %}
 
           <dl>
-            {% if content.publication_date_label|field_value %}
+            {% if publication_date_value %}
               <dt>{{ publication_date_label }}:</dt>
               <dd>{{ publication_date_value }}</dd>
             {% endif %}
