Set breadcrumb list item height re: 4.6.1 upgrade

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/_breadcrumb.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/_breadcrumb.scss
@@ -2,6 +2,10 @@
 ol.breadcrumb {
   font-size: 1rem;
 
+  li {
+    height: 1.5rem;
+  }
+
   a[href="https://lib.unb.ca"] {
     display: inline-block;
     height: 1rem;
