NBNP-280 Change UNB font-variant of dt element

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -92,6 +92,10 @@ dl .inline-list {
     font-weight: normal;
   }
 
+  dt {
+    font-family: 'ProximaNovaA-SemiBold','Century Gothic',AppleGothic,Arial,sans-serif;
+  }
+
   publication .panel-title a {
     display: block;
   }
