NBNP-186 Add missing Description label colon char

--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -237,7 +237,7 @@
             {% endif %}
 
             {% if content.field_description|field_value %}
-              <dt>{{ content.field_description|field_label }}</dt>
+              <dt>{{ content.field_description|field_label }}:</dt>
               <dd>{{ content.field_description|field_value }}</dd>
             {% endif %}
 
