--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -304,6 +304,9 @@ a.btn-add:active {
 }
 
 /* Helper classes */
+.link-external::after {
+  @include link-fa-icon("\f35d", "left", smaller);
+}
 .center-block img {
   margin-left: auto;
   margin-right: auto;
