--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -328,6 +328,9 @@ a.btn-add:active {
 .no-wrap {
   white-space: nowrap;
 }
+.text-small {
+  font-size: .9rem;
+}
 
 /* Chosen + Bootstrap */
 .select-wrapper .chosen-container {
