NBNP-331 Match publication font weight re: <dt> & <ul><strong>

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -94,6 +94,7 @@ dl .inline-list {
 
   dt {
     font-family: 'ProximaNovaA-SemiBold','Century Gothic',AppleGothic,Arial,sans-serif;
+    font-weight: normal;
   }
 
   publication .panel-title a {
