NBNP-378 Add whitespace to top of teaser description

--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -100,9 +100,9 @@
         <div class="frequency">{{ frequency_value }}</div>
       {% endif %}
       {% if content.field_description_html|field_value %}
-        <div class="description">{{ content.field_description_html|field_value }}</div>
+        <div class="description mt-2">{{ content.field_description_html|field_value }}</div>
       {% elseif content.field_description|field_value %}
-        <div class="description">{{ content.field_description|field_value }}</div>
+        <div class="description mt-2">{{ content.field_description|field_value }}</div>
       {% endif %}
     </div>
   </div>
