NBNP-378 Remove blank line between description last paragraph + file attachment

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -55,6 +55,9 @@ ins {
 .description {
   color: $text-muted;
 }
+.description-html p:last-child {
+  margin-bottom: 0;
+}
 dl .inline-list {
   display: inline;
   padding-left: 0;
