NBNP-379 Fix BS class typo

--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -308,8 +308,8 @@
           </dl>
         </div>
         {% if display_report_link %}
-        <div class="pub-report">
-          <a class="boeder border-secondary btn btn-sm text-secondary" href="{{ report_url }}"><span class="fas fa-envelope"></span>
+        <div class="report-form">
+          <a class="border border-secondary btn btn-sm text-secondary" href="{{ report_url }}"><span class="fas fa-envelope"></span>
             Report additional information or errors
           </a>
         </div>
