NBNP-395 Add footer region support to page template

--- a/custom/themes/newspapers_lib_unb_ca/templates/page.html.twig
+++ b/custom/themes/newspapers_lib_unb_ca/templates/page.html.twig
@@ -22,4 +22,10 @@
    {% if page.footer_top_first or page.footer_top_second %}
    </div>
    {% endif %}
+
+   {% if page.footer %}
+     <div id="footer-middle" class="container">
+       <div class="hr py-4">{{ page.footer }}</div>
+     </div>
+   {% endif %}
 {% endblock %}
