NBNP-395 Add footer-middle border + override heading color

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -609,6 +609,17 @@ a.back-link::before {
   margin-top: 0;
 }
 
+/* Footer w/ partnerships */
+#footer-middle {
+  .hr {
+    border-top: 1px solid #dee2e6;
+  }
+
+  h2 {
+    color: $black;
+  }
+}
+
 @media (max-width: 767px) {
   .no-gutters > aside {
     padding-left: 0;
