NBNP-379 Add webform button icon accessible aria attribute

--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -309,7 +309,8 @@
         </div>
         {% if display_report_link %}
         <div class="report-form">
-          <a class="border border-secondary btn btn-sm text-secondary" href="{{ report_url }}"><span class="fas fa-envelope"></span>
+          <a class="border border-secondary btn btn-sm text-secondary"
+            href="{{ report_url }}"><span class="fas fa-envelope" aria-hidden="true"></span>
             Report additional information or errors
           </a>
         </div>
