--- a/custom/modules/digital_serial/modules/digital_serial_issue/templates/digital-serial-issue.html.twig
+++ b/custom/modules/digital_serial/modules/digital_serial_issue/templates/digital-serial-issue.html.twig
@@ -11,7 +11,8 @@
         </dl>
         {% if display_report_link %}
         <div class="report-form">
-          <a class="border border-secondary btn btn-sm text-secondary" href="{{ report_url }}"><span class="fas fa-envelope"></span>
+          <a class="border border-secondary btn btn-sm text-secondary"
+             href="{{ report_url }}"><span aria-hidden="true" class="fas fa-envelope"></span>
             Report additional information or errors
           </a>
         </div>
