NBNP-388 CSS form adjustment re: extended height form actions fieldset/adjacent buttons

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/_form.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/_form.scss
@@ -94,3 +94,10 @@ textarea {
     }
   }
 }
+// Adjustment re: Search form actions input fieldset & adjacent buttons
+#views-exposed-form-search-search-page,
+#views-exposed-form-digital-page-lister-page-search {
+  .form-actions {
+      padding-bottom: 1.625rem;
+  }
+}
