--- a/custom/modules/newspapers_core/css/newspapers_core.tab_search.css
+++ b/custom/modules/newspapers_core/css/newspapers_core.tab_search.css
@@ -59,7 +59,9 @@ div[data-drupal-selector="edit-actions"] {
 div[data-drupal-selector="edit-actions"] input {
     line-height: normal;
 }
-div[data-drupal-selector="edit-actions"] .btn-unb-red:hover {
+div[data-drupal-selector="edit-actions"] .btn-unb-red:focus,
+div[data-drupal-selector="edit-actions"] .btn-unb-red:hover,
+div[data-drupal-selector="edit-actions"] .btn-unb-red:active {
     color: #fff!important;
 }
 #edit-search-scope .custom-checkbox .custom-control-label::before,
