NBNP-392 Custom style re: figure/figcaption

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/_import.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/_import.scss
@@ -5,6 +5,7 @@
 @import "breadcrumb";
 @import "digital-page-lister";
 @import "facets";
+@import "filter-caption";
 @import "form";
 @import "owl-carousel";
 @import "pager";
