NBNP-280 Remove publication image whitespace between img/border

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -86,6 +86,10 @@ dl .inline-list {
 .publication {
   figure {
     margin-bottom: 1em;
+
+    img {
+      margin-bottom: 0;
+    }
   }
 
   h2 {
